--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap');
 @import url('https://unpkg.com/normalize.css') layer(normalize);
 
-@layer normalize, base, demo, stick, effect, srollbar, debug;
+@layer normalize, base, demo, snap, stick, effect, srollbar, debug;
+
+* {
+  scroll-behavior: smooth;
+}
 
 @layer debug {
   [data-debug='true'] li {
@@ -208,6 +212,19 @@
     background-clip: text;
     color: #0000;
   }
+}
+
+@layer snap {
+  .snap-container {
+    scroll-snap-type: y mandatory;
+    overflow-y: scroll;
+    height: 100vh;
+  }
+  
+  .snap-container > section {
+    scroll-snap-align: start;
+    min-height: 100vh;
+  } 
 }
 
 @layer base {
